--- a/ui/widget.ui
+++ b/ui/widget.ui
@@ -35,7 +35,10 @@
    <item>
     <widget class="QListWidget" name="listWidget">
      <property name="styleSheet">
-      <string notr="true">background-color: transparent;</string>
+      <string notr="true">QListWidget {
+	background-color: transparent;
+	border: none;
+}</string>
      </property>
     </widget>
    </item>
