fix: 布局更新不及时问题

--- a/ui/widget.ui
+++ b/ui/widget.ui
@@ -16,33 +16,22 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="spacing">
-    <number>0</number>
+  <widget class="QListWidget" name="listWidget">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>661</width>
+     <height>99</height>
+    </rect>
    </property>
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
-   <item>
-    <widget class="QListWidget" name="listWidget">
-     <property name="styleSheet">
-      <string notr="true">QListWidget {
+   <property name="styleSheet">
+    <string notr="true">QListWidget {
 	background-color: transparent;
 	border: none;
 }</string>
-     </property>
-    </widget>
-   </item>
-  </layout>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
