feat: 改善item显示效果，用delegate自绘实现完美IconOnlyMode (居中)

--- a/ui/widget.ui
+++ b/ui/widget.ui
@@ -26,10 +26,7 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QListWidget {
-	background-color: transparent;
-	border: none;
-}</string>
+    <string notr="true"/>
    </property>
   </widget>
  </widget>
